--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "gantt-sample",
+  "name": "casl-sample",
   "version": "0.0.1",
-  "description": "Sample for Gantt Syncfusion Bug Showcase",
-  "productName": "Syncfusion Sample",
+  "description": "Sample for CASL v6 Bug Showcase",
+  "productName": "CASL Sample",
   "author": "Meidika Wardana <meidika@blueskylabs.com.au>",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
     "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "start": "quasar dev"
   },
   "dependencies": {
     "@casl/ability": "^6.5.0",
